<resources>
    <string name="app_name">Onebrush</string>
    <string name="start_dental" translatable="false">Start Your Dental Journey</string>
    <string name="start_registration" translatable="false">Start Registration</string>
    <string name="how_to_use" translatable="false">So how do you want to use this app (don\'t  worry, you can change your decision later)</string>
    <string name="onebrush_is_your_companion_for_better_oral_health" translatable="false">ONEBRUSH is your companion for better oral health.</string>
    <string name="dentinostic_by_onebrush" translatable="false">Dentinostic by ONEBRUSH</string>
    <string name="personal_trainner" translatable="false">ONEBRUSH: The personal trainer for your teeth</string>
    <string name="sign_in_peocedure" translatable="false">This sign in procedure is only required during your first start. After that, our app will remember you!</string>
    <string name="purchase" translatable="false">By purchasing the ONEBRUSH toothbrush, you will be allowed to connect it  to the app and track your brushing behaviour.</string>
    <string name="you_can_use_this_app_to_receive_a_remote_diagnosis_from_our_dentist" translatable="false">You can use this app to receive a remote diagnosis from our dentist.</string>
    <string name="log_in_to_your_account" translatable="false">Log in to your account</string>
    <string name="one_brush_text" translatable="false">Hint: You might have created an account during your first registration while purchasing your awesome brush. You can also use this account for your log in.</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Password" translatable="false">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="log_in">log in</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="remote_diagnosis_only">Remote diagnosis only</string>
    <string name="remote_diagnosis_toothbrush_connection">Remote diagnosis &amp; toothbrush connection</string>
    <string name="craete_new_account">CRAETE NEW ACCOUNT</string>
    <string name="noInternet">Connection Problem</string>
    <string name="no_valid_ssl">noValidSSL</string>
    <string name="web_adrs">The web address used to reach the dentinostic service is wrong. The host can be reached but not the requested web site.</string>
    <string name="denti_ser_error">The dentinostic server could not be found in the Internet.</string>
    <string name="ssl_error">The connection to the backend could not be established because of an error with the SSL. A possible reason is that the website’s certificate is invalid or obsolete.</string>
    <string name="bad_internet_connection">This device has no Internet connection. Therefore the required function cannot be executed. Please check your Internet settings.</string>
    <string name="wel_pat">Welcome Dear patient!</string>
    <string name="our_patient">Our dentists are always available for you. Simply follow the diagnostic question &amp; answer dialogue.</string>
    <string name="treament">Treatment swiftly</string>
    <string name="with_24_h">Within 24h you will receive a diagnosis and an easy to understand doctor’s letter including a prescription, if required. This treatment will cost you 25 E only.</string>
    <string name="your_data">Your data?  \nThey are 100% safe</string>
    <string name="we_treat">We treat your data and photos with absolute care. Nobody, except your doctor, will get access to this information. Above this, our entire processes are GDPR compliant.</string>
    <string name="register_free">Register free of charge!</string>
    <string name="in_order_ro">In order to establish a file for you, we need your email address and further administrational data. Also these data are handled GDPR compliant for sure.</string>
    <string name="upps_something_went_wrong">Oops... Something went wrong</string>
    <string name="the_log_in_to_your_account_wasn_t_successful">the log in to your account \n  wasn’t successful</string>
    <string name="upps_error">Oops... Something went wrong</string>
    <string name="terms_condition">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt  amet. Velit officia consequat duis enim velit mollit.</string>
    <string name="i_agree_pro">I agree to the processing of my personal data for the purpose of medical consulting</string>
    <string name="i_agree">I want to be informed about news around dentinostic</string>
    <string name="term_cond">Terms &amp; Conditions</string>
    <string name="create_pin">Create your PIN</string>
    <string name="decide_pin">Please decide about your 4-digit PIN.
this code will ensure that only you read the dentinostic data in this app on your device.</string>
    <string name="for_purpose_pin">For the purpose of data security, the app will deactivate after 60 seconds of
        inactivity. In order to open the app again this PIN code has to be entered.</string>
    <string name="enter_your">Please enter your 4-digit PIN here for a second time for confirmation.</string>
    <string name="biometric">Biometric Unlock</string>
    <string name="do_you">Do you want to unlock the app in future by face or fingerprint recognition?</string>
    <string name="open_app">Open the app with your PIN</string>
    <string name="code_pin">Your PIN code will open the dentinostic function of this app.</string>
    <string name="security">For the purpose of data security, the app will deactivate after 60 seconds of inactivity. In order to open the app again then, this PIN code has to be entered.</string>
    <string name="scan_bio">Let the system scan your biometrics</string>
    <string name="bio_demo">Your biometric data will open the dentinostic function of this app.</string>
    <string name="secu_purpose">For the purpose  of data security, the app will deactivate after 60 seconds of inactivity. In order to open the app again then, you have to identify with your biomrtric data.</string>
    <string name="also_your">also your 3rd trial did not map. In order to be sure about your identity, please log in with your registration data (email and password/0. Then proceed to Settings and reset the biometric authentification data.</string>
    <string name="wrong_email_address">Wrong email address...</string>
    <string name="email_not_exit">We could not vrify given email,Please check email and try again!</string>
    <string name="enter_email_address">Please Enter Email Address...</string>
    <string name="plz_enter_password">Please Enter Password</string>
    <string name="in_case_you_do_not_remember_the_password_you_can_ask_for_a_new_one">
                      Password should be Minimum 8 characters at least 1 Uppercase Alphabet, 1 Lowercase Alphabet, 1 Number and 1 Special Character:
</string>
    <string name="save_continue"><![CDATA[save & Continue]]></string>
    <string name="already_have_an_account_sign_in"><u>Already have an account?</u> <font fgcolor='#EC6B33'><u> Sign In </u></font></string>
    <string name="i_have">I have read the <font fgcolor='#C62D42'>Terms &amp; Conditions </font>and do agree</string>
    <string name="i_have123">I have read the <font fgcolor='#C62D42'>Terms &amp; Conditions </font>and do agree</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_worries_just_enter_your_email_and_we_ll_send_you_a_password">No worries! Just enter your email \n and we’ll send you a password</string>
    <string name="request_new_password">Request new password</string>
    <string name="a_new_password_will_be_sent_to_your_mail_account">A new password will be sent to your mail account</string>
    <string name="please_use_characters_low_and_capital_numbers_in_combination">Please use characters low and capital numbers in \n  combination</string>
    <string name="create_your_new_onebrush_account">Create your new ONEBRUSH account</string>
    <string name="create_your_onebrush_account">Create your ONEBRUSH account</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="prefered_language">Prefered Language</string>
    <string name="name">Name</string>
    <string name="i_agree_to_the_terms_amp_conditions_and_privacy_policy"><font fgcolor="#515E91">I agree to the</font><font fgcolor='#C62D42'> Terms &amp; Conditions </font><font fgcolor="#515E91">  and</font> </string>
    <string name="save_amp_continue"><![CDATA[save & Continue]]></string>
    <string name="don_t_have_account_sign_up"><u>Don’t have account? </u><font fgcolor='#C62D42'><u>Sign Up</u> </font></string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="uuups_please_enter_a_valid_e_mail_adress">Oops. Please enter a valid e-mail adress!</string>
    <string name="your_one_time_password_was_sent_to_your_mail_adress">Your one time password was \n sent to your mail-adress</string>
    <string name="back_to_login">Back to login</string>
    <string name="so_how_do_you_want_to_use_this_app_don_t_worry_you_can_change_your_decision_later">So how do you want to use this app (don\'t worry, you can change your decision later)</string>
    <string name="bio_unlok">Biometric Unlock</string>
    <string name="do_you_want">Do you want to unlock the app in future by \n face or fingerprint recognition?</string>
    <string name="no_unlock_with_pin"><font fgcolor='#EC6B33'>No, unlock with PIN</font></string>
    <string name="selectlanguage">Select Language</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="open_pin_txt">Open the app with your PIN</string>
    <string name="open_pin_purpose">Your PIN code will open the \n dentinostic function of this app.
        \n \n For the purpose of data security, the app will deactivate after 60 seconds of inactivity. In order to open the app again then, this PIN code has to be entered.</string>
    <string name="next">Next</string>
    <string name="dentinostic_would_like_to_send_you_notifications">Dentinostic would like to \n send you notifications.</string>
    <string name="notifications_can_be_hints_sounds_or_symbolic_icons">Notifications can be hints \n sounds or symbolic icons.</string>
    <string name="let_the_system_scan_your_biometrics">Let the system scan your biometrics</string>
    <string name="domstric">Your biometric data will open the dentinostic function of this app. \n
        \n For the purpose  of data security, the app will deactivate after 60 seconds of inactivity. In order to open the app again then, you have to identify with your biomrtric data.</string>
    <string name="also_ur">also your 3rd trial did not map. In order to be sure about your identity, please log in with your registration data (email and password/0. Then proceed to Settings and reset the biometric authentification data.</string>
    <string name="go_to_login">Go to Login</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you \n want to Log out?</string>
    <string name="you_will_lose_all">You will lose all your progress and \n  statistics on these account</string>
    <string name="onebrush">ONEBRUSH</string>
    <string name="are_you_want_to_save_data">Are you want to save data</string>
    <string name="allow">Allow</string>
    <string name="do_not_allow">Do not Allow</string>
</resources>