<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forgotModel"
            type="com.advantal.onebrush.forgot_password_pkg.forgot_viewmodel_pkg.ForgotViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".forgot_password_pkg.Forgot_Password_Activity">

        <RelativeLayout
            android:id="@+id/layout_for_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:visibility="visible">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/back_button"
                android:onClick="myClickEvent" />

            <ImageView
                android:id="@+id/one_brush_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/logo" />

            <TextView
                android:id="@+id/tv_reset_pass"
                style="@style/login_header"
                android:layout_below="@id/one_brush_logo"
                android:text="@string/reset_password" />

            <TextView
                android:id="@+id/tv_reset_subheader"
                style="@style/login_sub_header"
                android:layout_below="@id/tv_reset_pass"
                android:text="@string/no_worries_just_enter_your_email_and_we_ll_send_you_a_password" />

            <TextView
                android:id="@+id/tv_invalid_text"
                style="@style/login_sub_header"
                android:layout_below="@id/tv_reset_pass"
                android:text="@string/uuups_please_enter_a_valid_e_mail_adress"
                android:visibility="gone" />


            <TextView
                android:id="@+id/tv_email"
                style="@style/text_view"
                android:layout_marginTop="@dimen/_180sdp"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/et_email"
                style="@style/editext_field"
                android:layout_below="@id/tv_email"
                android:elevation="@dimen/_4sdp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:text="@={forgotModel.email1}" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset"
                style="@style/LoginButtonStyle"
                android:layout_above="@id/tv_reset_txt"
                android:background="@drawable/next_button_shape"
                android:onClick="myClickEvent"
                android:text="@string/request_new_password" />


            <TextView
                android:id="@+id/tv_reset_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/steagalmedium"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/a_new_password_will_be_sent_to_your_mail_account"
                android:textAllCaps="true"
                android:textColor="@color/navy"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal" />


        </RelativeLayout>

        <!--for pin-->

        <LinearLayout

            android:id="@+id/pin_view_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/prentlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/background_color">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/logo_for_pin"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:src="@drawable/logo" />


                        <ImageView
                            android:id="@+id/cross_img_for_pin"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:onClick="myClickEvent"
                            android:src="@drawable/cross_ic" />


                        <TextView
                            android:id="@+id/txt_heading"
                            style="@style/bio_header"
                            android:layout_below="@+id/logo_for_pin"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:text="@string/open_pin_txt"
                            android:textSize="@dimen/_18sdp"

                            />

                        <TextView
                            android:id="@+id/pin_txt"
                            style="@style/bio_header"
                            android:layout_below="@+id/txt_heading"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/open_pin_purpose"
                            android:textSize="@dimen/_11sdp" />

    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pin_txt"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_80sdp">

                    <com.advantal.onebrush.dentis_dash__board_pkg.pin_generate_pkg.PinEntryEditText
                        android:id="@+id/txt_pin_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:digits="0123456789"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionDone"
                        android:inputType="numberPassword"
                        android:maxWidth="@dimen/_20sdp"
                        android:maxLength="4"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/pin_text_color"
                        android:textIsSelectable="false"
                        android:textSize="20sp" />


                    <!--  <com.advantal.onebrush.dentis_dash__board_pkg.pin_generate_pkg.PinEntryEditText
                          android:id="@+id/txt_pin_entry"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center_horizontal"
                          android:layout_marginLeft="@dimen/_10sdp"
                          android:layout_marginRight="@dimen/_10sdp"
                          android:background="@null"
                          android:cursorVisible="true"
                          android:digits="0123456789"
                          android:focusable="true"
                          android:focusableInTouchMode="true"
                          android:gravity="center_horizontal"
                          android:imeOptions="actionDone"
                          android:inputType="numberPassword"
                          android:maxWidth="@dimen/_20sdp"
                          android:maxLength="4"
                          android:padding="@dimen/_10sdp"
                          android:textColor="@color/pin_text_color"
                          android:textIsSelectable="false"
                          android:textSize="20sp" />-->
                    <!--  -->
                </LinearLayout>

                    </RelativeLayout>

                </ScrollView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_btn"
                    style="@style/LoginButtonStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/next_button_shape"
                    android:onClick="myClickEvent"
                    android:text="@string/go_to_login"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>
        <!--End Pin-->


        <RelativeLayout
            android:id="@+id/bio_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:gravity="center|start|top"
            android:visibility="gone">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center|start|top">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@drawable/logo" />


                    <ImageView
                        android:id="@+id/cross_img_bio"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:onClick="myClickEvent"
                        android:src="@drawable/cross_ic" />


                    <TextView
                        android:id="@+id/txt_heading_bio"
                        style="@style/bio_header"
                        android:layout_below="@+id/logo"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:text="@string/let_the_system_scan_your_biometrics"
                        android:textSize="@dimen/_18sdp"

                        />

                    <TextView
                        android:id="@+id/pin_txt_bio"
                        style="@style/bio_header"
                        android:layout_below="@+id/txt_heading_bio"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/domstric"
                        android:textSize="@dimen/_11sdp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_below="@+id/pin_txt_bio"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:src="@drawable/touch_id" />
                </RelativeLayout>

            </ScrollView>


            <TextView
                android:id="@+id/no_unlock_tx"
                style="@style/bio_header"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/also_ur"
                android:textSize="@dimen/_11sdp" />
        </RelativeLayout>
    </RelativeLayout>
</layout>